Кипит работа а я в слезах

--- a/math.html
+++ b/math.html
@@ -8,11 +8,11 @@
     <style>
         body {
             background-image: url("sad.jpg");
-            background-size: cover; /* Изображение растягивается пропорционально, заполняя экран */
-            background-position: center; /* Центрирует изображение */
-            background-repeat: no-repeat; /* Избегаем повторений */
-            width: 100vw; /* 100% ширины экрана */
-            height: 100vh; /* 100% высоты экрана */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            width: 100vw;
+            height: 100vh;
         }
     </style>
 </head>
