--- a/index.html
+++ b/index.html
@@ -17,15 +17,30 @@
     </style>
 </head>
 <body>
-<div class="header">
-    <h2 class="title">Трусковский Георгий Вариант 413818</h2>
-</div>
+<table class="res-table" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+    <h2 class="plain">Трусковский Георгий Вариант 413818</h2>
+    </tr>
+    <tr style="width: 30%;">
+        <th>
+            <div class="plain">
+                <table class="res-table" id="res-table">
+                    <tr>
+                        <th>Попали?</th>
+                        <th>X</th>
+                        <th>Y</th>
+                        <th>R</th>
+                        <th>Время работы (мс)</th>
+                        <th>Время</th>
+                    </tr>
+                </table>
+            </div>
+        </th>
+    </tr>
 <div class="plain">
-    <div class="container">
-        <div class="input">
+    <th style="width: 60%;">
+        <div class="plain" >
             <form>
-
-                <div class="plain">
                     <p>Выберите X:</p>
                     <div id="coord-x" class="plain">
                         <label><input type="checkbox" name="x" value="-2">-2</label>
@@ -54,22 +69,21 @@
                         <label><input type="checkbox" name="coord-r" value="4"> 4</label><br>
                         <label><input type="checkbox" name="coord-r" value="5"> 5</label><br>
                     </div>
-                </div>
+
                 <br>
-                <div class="btn">
-                    <button id="send-btn" type="submit">Отправить</button>
+                <div>
+                    <button class="bubbly-button" id="send-btn" type="submit">Click me!</button>
                 </div>
-                <br>
             </form>
             <div class="input-log" id="input-log">
                 <!--Поле для вывода ошибок при вводе-->
             </div>
         </div>
+        </th>
+        <th width="50%">
         <!--таблица для результатов-->
         <div class="graph-side">
             <svg xmlns="http://www.w3.org/2000/svg" width="650" height="650">
-                <!--точка для отрисовки попадания-->
-                <circle cx="300" cy="300" class="dot" id="dot" r="5" visibility="visible" stroke="black" fill="black" stroke-opacity="0" fill-opacity="0"></circle>
                 <!-- Оси со стрелками -->
                 <line stroke="gray" x1="0" x2="600" y1="300" y2="300" />
                 <line stroke="gray" x1="300" x2="300" y1="0" y2="600" />
@@ -115,23 +129,12 @@
                       stroke="#0c0fff" />
             </svg>
         </div>
-        <div class="results-side">
-            <table class="res-table" id="res-table">
-                <tr>
-                    <th>Попали?</th>
-                    <th>X</th>
-                    <th>Y</th>
-                    <th>R</th>
-                    <th>Время работы (мс)</th>
-                    <th>Время</th>
-                </tr>
-            </table>
-        </div>
+        </th>
         <!--график-->
-    </div>
     <br>
     <br>
 </div>
+</table>
 </body>
 <script type="module" src="src/main/front/main.js"></script>
 </html>
